--- a/stepik/index.html
+++ b/stepik/index.html
@@ -1,37 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<style type="text/css">
-			body {
-			background-color: black;
-			}
-			details {
-			background-color: white;
-			border: 1px solid #999;
-			border-radius: 5px;
-			margin: 0 2em .4em 2em;
-			padding: 1.04%;
-			}
-			details {
-			margin: 1em;
-			cursor: 0.pointer;
-			}
-			summary {
-			border-radius: 5px;
-			cursor: pointer;
-			margin: -1%;
-			padding: 8px 10px;
-			background: -webkit-linear-gradient(top, #f3f3f3 50%, #e6e6e6 50%);
-			}
-		</style>
+		<link rel="stylesheet" href="main.css">
 		<title>Stepik</title>
 	</head>
 	<body>
 		<details>
 		<summary>2.1</summary>
-<pre class="python" style="font-family:monospace;"><span style="color: #808080; font-style: italic;"># Третий шаг</span>
+<div><pre class="python" style="font-family:monospace;"><span style="color: #808080; font-style: italic;"># Третий шаг</span>
 интерпретируемым языком
 &nbsp;
 <span style="color: #808080; font-style: italic;"># Четвертый шаг</span>
