--- a/stepik/index.html
+++ b/stepik/index.html
@@ -63,7 +63,7 @@ name <span style="color:#6c6">=</span> <span style="color:green">input</span><sp
 &nbsp;
 <span style="color:grey;font-style:italic"># Двенадцатый шаг</span>
 name <span style="color:#6c6">=</span> <span style="color:green">input</span><span style="color:#000">&#40;</span><span style="color:#000">&#41;</span>
-<span style="color:#f70;font-weight:700">print</span><span style="color:#000">&#40;</span>name<span style="color:#6c6">,</span> <span style="color:#483d8b">&quot; - чемпион!&quot;</span><span style="color:#000">&#41;</span>
+<span style="color:#f70;font-weight:700">print</span><span style="color:#000">&#40;</span>name<span style="color:#6c6">,</span> <span style="color:#483d8b">&quot;- чемпион!&quot;</span><span style="color:#000">&#41;</span>
 &nbsp;
 <span style="color:grey;font-style:italic"># Тринадцатый шаг</span>
 a<span style="color:#6c6">,</span> b<span style="color:#6c6">,</span> c <span style="color:#6c6">=</span> <span style="color:green">input</span><span style="color:#000">&#40;</span><span style="color:#000">&#41;</span><span style="color:#6c6">,</span> <span style="color:green">input</span><span style="color:#000">&#40;</span><span style="color:#000">&#41;</span><span style="color:#6c6">,</span> <span style="color:green">input</span><span style="color:#000">&#40;</span><span style="color:#000">&#41;</span>
@@ -689,7 +689,6 @@ a<span style="color:#6c6">,</span> b<span style="color:#6c6">,</span> c<span sty
 <span style="color:#f70;font-weight:700">print</span><span style="color:#000">&#40;</span>f<span style="color:#483d8b">'Наибольшее число = {max(a, b, c, d, e)}'</span><span style="color:#000">&#41;</span>
 &nbsp;
 <span style="color:grey;font-style:italic">######## 13 #########</span>
-a <span style="color:#6c6">=</span> <span style="color:green">int</span><span style="color:#000">&#40;</span><span style="color:green">input</span><span style="color:#000">&#40;</span><span style="color:#000">&#41;</span><span style="color:#000">&#41;</span>
 a<span style="color:#6c6">,</span> b<span style="color:#6c6">,</span> c <span style="color:#6c6">=</span> <span style="color:green">int</span><span style="color:#000">&#40;</span><span style="color:green">input</span><span style="color:#000">&#40;</span><span style="color:#000">&#41;</span><span style="color:#000">&#41;</span><span style="color:#6c6">,</span> <span style="color:green">int</span><span style="color:#000">&#40;</span><span style="color:green">input</span><span style="color:#000">&#40;</span><span style="color:#000">&#41;</span><span style="color:#000">&#41;</span><span style="color:#6c6">,</span> <span style="color:green">int</span><span style="color:#000">&#40;</span><span style="color:green">input</span><span style="color:#000">&#40;</span><span style="color:#000">&#41;</span><span style="color:#000">&#41;</span>
 <span style="color:#f70;font-weight:700">print</span><span style="color:#000">&#40;</span><span style="color:green">max</span><span style="color:#000">&#40;</span>a<span style="color:#6c6">,</span> b<span style="color:#6c6">,</span> c<span style="color:#000">&#41;</span><span style="color:#000">&#41;</span>
 <span style="color:#f70;font-weight:700">print</span><span style="color:#000">&#40;</span>a + b + c - <span style="color:green">min</span><span style="color:#000">&#40;</span>a<span style="color:#6c6">,</span> b<span style="color:#6c6">,</span> c<span style="color:#000">&#41;</span> - <span style="color:green">max</span><span style="color:#000">&#40;</span>a<span style="color:#6c6">,</span> b<span style="color:#6c6">,</span> c<span style="color:#000">&#41;</span><span style="color:#000">&#41;</span>
@@ -1023,7 +1022,7 @@ flag <span style="color:#6c6">=</span> <span style="color:#483d8b">'YES'</span>
 n <span style="color:#6c6">=</span> <span style="color:green">int</span><span style="color:#000">&#40;</span><span style="color:green">input</span><span style="color:#000">&#40;</span><span style="color:#000">&#41;</span><span style="color:#000">&#41;</span>
 a<span style="color:#6c6">,</span> b <span style="color:#6c6">=</span> <span style="color:#ff4500">1</span><span style="color:#6c6">,</span> <span style="color:#ff4500">1</span>
 <span style="color:#f70;font-weight:700">for</span> i <span style="color:#f70;font-weight:700">in</span> <span style="color:green">range</span><span style="color:#000">&#40;</span>n<span style="color:#000">&#41;</span>:
-    <span style="color:#f70;font-weight:700">print</span><span style="color:#000">&#40;</span>a<span style="color:#6c6">,</span> end<span style="color:#6c6"></span><span style="color:#483d8b">' '</span><span style="color:#000">&#41;</span>
+    <span style="color:#f70;font-weight:700">print</span><span style="color:#000">&#40;</span>a<span style="color:#6c6">,</span> end<span style="color:#6c6"></span><span style="color:#483d8b">=' '</span><span style="color:#000">&#41;</span>
     a<span style="color:#6c6">,</span> b <span style="color:#6c6">=</span> b<span style="color:#6c6">,</span> a + b</pre></details><details><summary>7.4</summary><pre class="python" style="font-family:monospace"><span style="color:grey;font-style:italic">######## 2 #########</span>
 до
 &nbsp;
@@ -1376,7 +1375,7 @@ a<span style="color:#6c6">,</span> b<span style="color:#6c6">,</span> <span styl
         <span style="color:#f70;font-weight:700">if</span> i % j <span style="color:#6c6">==</span> <span style="color:#ff4500">0</span>:
             <span style="color:#f70;font-weight:700">break</span>
     <span style="color:#f70;font-weight:700">else</span>:
-<span style="color:#f70;font-weight:700">       print</span><span style="color:#000">&#40;</span>i<span style="color:#000">&#41;</span></pre></details><details><summary>8.1</summary><pre class="python" style="font-family:monospace"><span style="color:grey;font-style:italic">######## 1 #########</span>
+<span style="color:#f70;font-weight:700">         print</span><span style="color:#000">&#40;</span>i<span style="color:#000">&#41;</span></pre></details><details><summary>8.1</summary><pre class="python" style="font-family:monospace"><span style="color:grey;font-style:italic">######## 1 #########</span>
 <span style="color:#ff4500">0</span><span style="color:#6c6">,</span> <span style="color:#ff4500">1</span><span style="color:#6c6">,</span> <span style="color:#ff4500">2</span><span style="color:#6c6">,</span> <span style="color:#ff4500">3</span><span style="color:#6c6">,</span> <span style="color:#ff4500">4</span><span style="color:#6c6">,</span> <span style="color:#ff4500">5</span>
 &nbsp;
 <span style="color:grey;font-style:italic">######## 2 #########</span>
