--- a/index.html
+++ b/index.html
@@ -1,49 +1,18 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" >
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>КаММариК</title>
-    <link rel="stylesheet" href="css/main.css" />
-    <link rel="shortcut icon" href="img/favicon.png" type="image/png" />
+  <meta charset="UTF-8">
+  <title>Переделывай!</title>
+  <link rel="stylesheet" href="./style.css">
+  <link rel="shortcut icon" href="img/favicon.png" type="image/png" />
 </head>
 <body>
-    <div class="preloader">
-        <div style="PreloaderStyle" class="preloader-circle"></div>
-    </div>
-    <div id="asif-page">
-        <div class="wrapper">
-            <div class="background">
-                <video preload muted ref="background-video" id="background-video">
-                    <source src="videos/1.mp4" type="video/mp4" />
-                </video>
-            </div>
-            <div class="container">
-                <div class="asif-page-wrapper">
-                    <div class="asif-page-info">
-                        <div class="asif-page-info-play" :class=" { 'is-playing': isPlaying }" :style="PlayButtonStyle" @click="startPlay">
-                            Play
-                        </div>
-                        <div class="asif-page-info-logo"></div>
-                        <div ref="title" :class="{ 'title-visible': titleVisible }" class="asif-page-info-title"
-                            :style="TitleStyle">
-                            {{ title }}
-                        </div>
-                        <div class="asif-page-info-social" :class="{ 'social-visible': titleVisible }">
-                            <a v-for="(item, key) in social" :href="getSocialLink(key, item)" target="_blank"
-                                class="asif-page-info-social-item">
-                                <span :style="SocialStyle" :class="'icon-' + key"></span>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <script src="js/window.js"></script>
-    <script src="js/vue.js"></script>
-    <script src="js/config.js"></script>
-    <script src="js/common.js"></script>
+<div class="container">
+  <div class="copy-container center-xy">
+    <p>
+      Я всё удалил ;)
+    </p>
+  </div>
+</div>
 </body>
 </html>
