--- a/index.htm
+++ b/index.htm
@@ -106,10 +106,10 @@ $$    $$/ $$    $$/ $$ | $/  $$ |$$ | $/  $$ |$$ |  $$ |$$ |  $$ |/ $$   |$$ | $
                                                                                     
 		</pre>
 		<div class="center" id="data" style="opacity: 0%; margin-top: 120px; text-align: center;">
-			<a href="https://steamcommunity.com/id/cummarik">steam</a>
-			<a href="https://vk.com/danko_jun">vk</a>
-			<a href="https://dsc.bio/cummarik">discord</a>
-			<a href="tg://resolve?domain=cummarik">telegram</a>
+			<a href="https://steamcommunity.com/id/cummarik" target="_blank">steam</a>
+			<a href="https://vk.com/danko_jun" target="_blank">vk</a>
+			<a href="https://dsc.bio/cummarik" target="_blank">discord</a>
+			<a href="tg://resolve?domain=cummarik" target="_blank">telegram</a>
 			<br><br>
 		</div>
 		<div class="center" id="shoutout_marquee" style="opacity: 0%; margin-top: 155px;">
