--- a/index.htm
+++ b/index.htm
@@ -3,8 +3,11 @@
 	<head>
 		<title>🤔</title>
 		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+		<meta name="description" content="че за нн">
+		<meta name="keywords" content="НН, cummarik"> 
+		<meta name="robots" CONTENT="ALL">
 		<link rel="shortcut icon" href="assets/img/favicon.png" type="image/png" />
+		
 		<style>
 			body {
 				background-color: #000000;
