--- a/old/index.html
+++ b/old/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+	<meta name="description" content="че за нн">
+	<meta name="keywords" content="НН, cummarik"> 
+	<meta name="robots" CONTENT="ALL">
     <title>КаММариК</title>
     <link rel="stylesheet" href="css/main.css" />
     <link rel="shortcut icon" href="img/favicon.png" type="image/png" />
